k8s/api2/api2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api2-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: api2.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api2
                port:
                  number: 80
